[package]
name = "tutti-sampler"
version = "0.0.1"
edition = "2021"
description = "Sampler, Butler thread, Recording, Audio input, Time stretch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[features]
# Default: All features enabled for backwards compatibility
default = ["butler", "recording", "audio-input"]

# Butler thread for disk streaming (requires std::thread)
# When disabled, only in-memory sample playback is available
butler = []

# Recording to disk (requires butler + std::fs)
# When disabled, recording APIs are not available
recording = ["butler"]

# Hardware audio input via CPAL
# When disabled, only file-based input is available
audio-input = []

[dependencies]
tutti-core = { path = "../tutti-core" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Audio
cpal = "0.15"
audio-automation = "0.1"

# Lock-free
ringbuf = "0.4"
crossbeam-channel = "0.5"
dashmap = "6.1"
arc-swap = "1.7"
parking_lot = "0.12"
smallvec = "1.13"

# Parallel I/O
rayon = "1.10"

# Thread priority
thread-priority = "1.1"

# DSP / Files
hound = "3.5"


[dev-dependencies]
tracing-subscriber = "0.3"
insta = { version = "1.41", features = ["yaml"] }
approx = "0.5"
tempfile = "3.8"
rand = "0.8"
serde_json = "1"
