[package]
name = "tutti-sampler"
version = "0.0.1"
edition = "2021"
description = "Sampler, Butler thread, Recording, Audio input, Time stretch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[features]
default = ["wav"]

# Audio format support - cascade to tutti-core
wav = ["tutti-core/wav"]
flac = ["tutti-core/flac"]
mp3 = ["tutti-core/mp3"]
ogg = ["tutti-core/ogg"]
files = ["wav", "flac", "mp3", "ogg"]

[dependencies]
# Base dependency - format features added above
tutti-core = { path = "../tutti-core" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Audio
cpal = "0.15"
audio-automation = { path = "../audio-automation" }

# Lock-free
ringbuf = "0.4"
crossbeam-channel = "0.5"
dashmap = "6.1"
arc-swap = "1.7"
parking_lot = "0.12"
smallvec = "1.13"

# Parallel I/O
rayon = "1.10"

# Thread priority
thread-priority = "1.1"

# DSP / Files
hound = "3.5"


[dev-dependencies]
tracing-subscriber = "0.3"
insta = { version = "1.41", features = ["yaml"] }
approx = "0.5"
tempfile = "3.8"
rand = "0.8"
serde_json = "1"
