[package]
name = "tutti-synth"
version = "0.0.1"
edition = "2021"
description = "Software synthesizers for Tutti (SoundFont, polyphonic synth, wavetable)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[features]
default = []
soundfont = ["dep:rustysynth"]
midi = ["tutti-core/midi", "tutti-midi-io"]

[dependencies]
tutti-core = { path = "../tutti-core" }
tutti-midi-io = { path = "../tutti-midi-io", optional = true }

# Lock-free
dashmap = "6.1"

# Error handling
thiserror = "2"

# Optional
rustysynth = { package = "rustysynth-tutti", version = "1.3.6", path = "../rustysynth-tutti/rustysynth", optional = true }

[dev-dependencies]
approx = "0.5"
