[package]
name = "tutti-synth"
version = "0.0.1"
edition = "2021"
description = "Synth building blocks for Tutti (voice allocation, modulation, unison, portamento, tuning, SoundFont)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[features]
default = []

# Individual building blocks
voice-alloc = []
modulation = []
unison = []
portamento = []
tuning = []

# SoundFont synthesis (requires tutti-core midi for MidiAudioUnit)
soundfont = ["dep:rustysynth", "tutti-core/midi"]

# SynthBuilder fluent API (requires all synth blocks + tuning + midi)
builder = ["synth-blocks", "tuning", "tutti-core/midi"]

# Convenience feature groups
synth-blocks = ["voice-alloc", "modulation", "unison", "portamento"]
full = ["synth-blocks", "tuning", "soundfont", "builder"]

[dependencies]
tutti-core = { path = "../tutti-core" }

# Lock-free collections (for SoundFont manager)
dashmap = "6.1"

# Error handling
thiserror = "2"

# Optional - SoundFont
rustysynth = { package = "rustysynth-tutti", version = "1.3.6", path = "../rustysynth-tutti/rustysynth", optional = true }

[dev-dependencies]
approx = "0.5"
