[package]
name = "tutti-synth"
version = "0.0.1"
edition = "2021"
description = "Synth building blocks for Tutti (voice allocation, modulation, unison, portamento, tuning, SoundFont)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[features]
default = ["midi"]

# MIDI support (for SoundFont MIDI input)
midi = ["tutti-core/midi"]

# SoundFont synthesis (requires tutti-core midi for MidiAudioUnit)
soundfont = ["dep:rustysynth", "midi"]

# Everything
full = ["soundfont"]

[dependencies]
tutti-core = { path = "../tutti-core", default-features = false }

# Lock-free collections (for SoundFont manager)
dashmap = "6.1"

# RT-safe small vectors
smallvec = "1.13"

# Error handling
thiserror = "2"

# Optional - SoundFont
rustysynth = { package = "rustysynth-tutti", version = "1.3.6", path = "../rustysynth-tutti/rustysynth", optional = true }

[dev-dependencies]
approx = "0.5"
